test/foof/errors/syntax-1.foo
(define (foo x)
  `(this unquote is invalid ,@)
  (display "Hello world!)
  (newline))